[gd_scene load_steps=23 format=3 uid="uid://bfg1ub413xc20"]

[ext_resource type="Script" path="res://enemies/Schmovosaur/Schmovosaur Enemy.gd" id="1_rup4a"]
[ext_resource type="Script" path="res://common/actor-elements/hurtbox.gd" id="2_qtaff"]
[ext_resource type="Script" path="res://common/actor-elements/hitbox.gd" id="3_s8ajp"]
[ext_resource type="Script" path="res://common/actor-elements/health.gd" id="4_pjjf5"]
[ext_resource type="PackedScene" uid="uid://dkwnbhlmom1ch" path="res://enemies/Schmovosaur/schmovosaur_ai_2.tscn" id="5_l6hc8"]
[ext_resource type="PackedScene" uid="uid://dbq71d7fh3w6q" path="res://assets/Shmovosaur/shmovosaur_animations.tscn" id="6_w3ysd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q5uni"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c1moo"]
diffuse_mode = 3
albedo_color = Color(0.921569, 0.341176, 0.341176, 1)
emission = Color(1, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6xy7g"]
material = SubResource("StandardMaterial3D_c1moo")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g0es1"]
radius = 0.610806
height = 2.10739

[sub_resource type="BoxShape3D" id="BoxShape3D_bmele"]
size = Vector3(0.924626, 0.7153, 1)

[sub_resource type="Animation" id="Animation_38soa"]
length = 0.001
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qh6ik"]
resource_name = "attack"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.309), Vector3(0, 0, 0)]
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c2rqt"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4mvm1"]
resource_name = "stagger"
length = 0.300005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.174254), Vector3(0, 0, -0.174533), Vector3(0, 0, 0.0840202), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("MeshInstance3D:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("StandardMaterial3D_c2rqt"), SubResource("StandardMaterial3D_c2rqt"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o72sg"]
_data = {
"RESET": SubResource("Animation_38soa"),
"attack": SubResource("Animation_qh6ik"),
"stagger": SubResource("Animation_4mvm1")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_64m1x"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5prjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdb47"]
bg_color = Color(0.32549, 0.741176, 0.462745, 1)

[sub_resource type="Theme" id="Theme_hxsbk"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_5prjw")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_cdb47")

[sub_resource type="SphereShape3D" id="SphereShape3D_jfmux"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0lxu1"]
transparency = 4
blend_mode = 1
albedo_color = Color(0.545098, 0.952941, 0.952941, 0.337255)

[node name="Schmovosaur" type="CharacterBody3D"]
collision_layer = 16
script = ExtResource("1_rup4a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00357932, 0)
shape = SubResource("CapsuleShape3D_q5uni")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_6xy7g")

[node name="Hurtbox" type="Area3D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 64
collision_mask = 1028
script = ExtResource("2_qtaff")
health = NodePath("../Health")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00948918, 0)
shape = SubResource("CapsuleShape3D_g0es1")

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("3_s8ajp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.490013, 0, 0)
shape = SubResource("BoxShape3D_bmele")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o72sg")
}

[node name="HealthDisplay" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23996, 0)
billboard = 1
texture = SubResource("ViewportTexture_64m1x")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("display")]
script = ExtResource("4_pjjf5")
max_health = 100
display = NodePath("../SubViewport/ProgressBar")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(100, 15)

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_right = 100.0
offset_bottom = 15.0
theme = SubResource("Theme_hxsbk")
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Schmovosaur AI 2" parent="." instance=ExtResource("5_l6hc8")]

[node name="Charge Cooldown" parent="Schmovosaur AI 2" index="1"]
wait_time = 5.0

[node name="PlayerDetectionSphere" type="Area3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionSphere"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_jfmux")

[node name="Translucent Sphere" type="CSGSphere3D" parent="PlayerDetectionSphere/CollisionShape3D"]
material = SubResource("StandardMaterial3D_0lxu1")

[node name="shmovosaur_animations" parent="." instance=ExtResource("6_w3ysd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.554311, 0)

[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="death" from="Health" to="." method="_on_health_death"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="checkVelocity" from="Schmovosaur AI 2" to="." method="_on_schmovosaur_ai_2_check_velocity"]
[connection signal="area_entered" from="PlayerDetectionSphere" to="Schmovosaur AI 2" method="_on_player_detection_sphere_area_entered"]
[connection signal="area_exited" from="PlayerDetectionSphere" to="Schmovosaur AI 2" method="_on_player_detection_sphere_area_exited"]

[editable path="Schmovosaur AI 2"]
[editable path="shmovosaur_animations"]
